perf: parallelize GitHotspotAnalyzer using virtual threads